syntax = "proto3";

package yandex.cloud.priv.datatransfer.v1.endpoint;

option go_package = "a.yandex-team.ru/cloud/bitbucket/private-api/yandex/cloud/priv/datatransfer/v1/endpoint;tm_server_endpoint";

import "yandex/cloud/priv/datatransfer/v1/endpoint/yds.proto";
import "yandex/cloud/priv/datatransfer/v1/endpoint/common.proto";

message EventhubAuth {
    string method = 1;
    string key_name = 2;
    Secret key_value = 3;
}
message EventhubSource {
    // for dedicated db
    string namespace_name = 1;
    string hub_name = 2;
    EventhubAuth auth = 3;
    string topic = 4;
    string consumer_group = 5;
    string starting_offset = 6;
    // transform -> split -> convert -> sinker
    DataTransformationOptions transformer = 7;
    ConvertRecordOptions converter = 8;
}
